--- a/website.html
+++ b/website.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (website.psd) -->
-<img src="images/website.gif" width="1920" height="5000" alt="">
+<img src="https://anugool.github.io/shelongs/website.gif" width="1920" height="5000" alt="">
 <!-- End Save for Web Slices -->
 </body>
 </html>
